...
                            <view alpha="0.89999997615814209" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A6x-eb-0Wt">
                                <rect key="frame" x="0.0" y="450" width="600" height="150"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4P9-Lx-DML">
                                        <rect key="frame" x="150" y="0.0" width="300" height="150"/>
                                        <subviews>
                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please choose a scale level" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OL4-uv-Far">
                                                <rect key="frame" x="204" y="31" width="74" height="44"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How many scale levels?" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UjN-i9-xNo">
                                                <rect key="frame" x="22" y="4" width="113" height="44"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pWw-o0-e3h" userLabel="
                                                <rect key="frame" x="141" y="31" width="50" height="44"/>
                                                <accessibility key="accessibilityConfiguration" identifier="LOD"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="50" id="N5a-hS-073"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                                <nil key="highlightedColor"/>
                                            </label>
...
                                                <connections>
                                                    <action selector="changeLevels:" destination="2US-6N-aTT" eventType="valueChanged" id="Xqw-Db-BKd"/>
                                                </connections>
                                            </stepper>
                                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oey-je-9Ud">
                                                <rect key="frame" x="21" y="100" width="96" height="30"/>
                                                <state key="normal" title="Estimate">
                                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="estimateAction:" destination="2US-6N-aTT" eventType="touchUpInside" id="w5v-y7-4OX"/>
                                                </connections>
                                            </button>
                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ujn-Nh-4IT" userLabel="Estimate R
                                                <rect key="frame" x="70" y="78" width="173" height="21"/>
                                                <accessibility key="accessibilityConfiguration" identifier="estimateResults"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="21" id="9B1-lB-Dqb"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mOR-yb-XCA">
                                                <rect key="frame" x="202" y="100" width="77" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="77" id="3jE-8L-APh"/>
                                                </constraints>
                                                <state key="normal" title="Download">
                                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <connections>
                                                    <action selector="downloadAction:" destination="2US-6N-aTT" eventType="touchUpInside" id="WBb-4H-6EM"/>
                                                </connections>
                                            </button>
...
