...
                            }
                        }
                        else if let error = error{
                            print("job failed: \(error)")
                            dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_DEFAULT, 0)) {
                                dispatch_async(dispatch_get_main_queue()) {
                                    UIAlertView(title: "Error", message: error.localizedDescription, delegate: nil, cancelButtonTitle: "Ok").show()
                                    SVProgressHUD.dismiss()
                                }
                            }
                        }
                }
            }
...
                            self.mapView.map!.basemap?.baseLayers.removeAllObjects()
                            self.mapView.map!.basemap?.baseLayers.addObject(LTC)
                            
                            //Tell the user we're done
                            dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_DEFAULT, 0)) {
                                dispatch_async(dispatch_get_main_queue()) {
                                    UIAlertView(title: "Download Complete", message: "The tile cache has been added to the map", delegate: nil, cancelButtonTitle: "Ok").show()
                                }
                            }
                        }
                    }
                }
            }
...
